<resources>
    <string name="app_name">SA Assistant</string>
    <string name="nav_header_title">SA Assistant</string>
    <string name="nav_header_subtitle">Version 1.5</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    // Menu items

    <string name="Menu">Меню</string>
    <string name="menu_home">Главная</string>
    <string name="menu_shop_list">Список магазинов</string>
    <string name="menu_reports">Отчеты</string>
    <string name="menu_notes">Заметки</string>
    <string name="menu_users">Пользователи</string>
    <string name="menu_utils">Утилиты</string>
    <string name="menu_reference">Справка</string>

    // Buttons

    <string name="add_shop_btn">Добавить магазин</string>
    <string name="del_shop_btn">Удалить магазин</string>
    <string name="add_bot_report">Добавить отчет</string>
    <string name="del_bot_report">Удалить отчет</string>
    <string name="btn_copy">Скопировать</string>
    <string name="btn_form">Сформировать</string>
    <string name="clear_btn">Очистить</string>
    <string name="ShopOOO">OOO</string>
    <string name="kbsa">KBSA</string>
    <string name="displacement">Перемещения</string>
    <string name="from">Откуда</string>
    <string name="to">Куда</string>
    <string name="btn_add_rep">+</string>
    <string name="btn_del_rep">-</string>
    <string name="sn">Серийный номер</string>
    <string name="date_trans">Даты прибытия и отправки</string>
    <string name="print_rep">Отчет по принтерам</string>
    <string name="btn_import_db">Ипортировать список</string>
    <string name="btn_export_db">Экспортировать список</string>
    <string name="btn_change">Изменить</string>

    //Activity

    <string name="title_activity_import">Импорт списка магазинов</string>

    <string name="editTextHint">Введите номера магазинов …</string>
    <string name="add_rep_hint">Напишите отчет</string>
    <string name="note_hint">Запишите неообходимую информацию</string>
    <string name="checkButton">Проверить магазины</string>
    <string name="Pars">Parser</string>
    <string name="ShopList">Список магазинов</string>
    <string name="ShopNumber">Номер магазина</string>
    <string name="ShopCity">Город</string>
    <string name="ShopAddress">Адрес магазина</string>
    <string name="AddShop">Добавить магазин</string>
    <string name="DelShop">Удалить магазин</string>
    <string name="SA">Системный администратор</string>
    <string name="ReportType">Тип отчета</string>
    <string name="ReportHint">Сформируйте отчет</string>
    <string name="PrintReportHint">Введите серийный номер</string>
    <string name="FIO">Фамилия И.О.</string>

    <string name="ChooseUser">Выберите пользователя</string>
    <string name="AddUser">Добавить пользователя</string>
    <string name="DelUser">Удалить пользователя</string>

    <string name="Reports">Отчеты</string>
    <string name="Send">Отправить</string>
    <string name="Clear">Очистить</string>
    <string name="Close">Закрыть</string>
    <string name="Reserve">Резерв</string>

    // Arrays

    <string-array name="emptyChoose">
        <item>Список пуст</item>
    </string-array>

    <string-array name="OOO">
        <item>\"Альфа-М\"</item>
        <item>\"Бета-М\"</item>
        <item>\"Лабиринт-М\"</item>
        <item>\"Альфа-Рязань\"</item>
        <item>\"Альфа-Владимир\"</item>
    </string-array>


    <string-array name="ChooseReports">
        <item>Произвольный отчет</item>
        <item>Банк терминал</item>
        <item>Интернет (выкл)</item>
        <item>Интернет (вкл)</item>
        <item>Свет (выкл)</item>
        <item>Свет (вкл)</item>
        <item>ЕГАИС (стоп)</item>
        <item>ЕГАИС (замена)</item>
        <item>ЕГАИС (UTM)</item>
        <item>Проверка резерва</item>

    </string-array>


    <string-array name="Reports">
        <item>
            Проблема: \n\nРешение: \n\nКомментарий:
        </item>
        <item>
            Проблемы с терминалом оплаты на 1-ой кассе БТ --- а именно:\n
            1. \n\n

            Внешнее оборудование в порядке. Рекомендуемые действия от тех.поддержки никаких изменений не дали.\n\n

            Подал заявку в службу поддержки СБРФ:\n
        </item>
        <item>
            Проблема: отсутствует основной канал интернета \n\nРешение: магазин переведен на модем \n\n
            Комментарий: проблема на стороне провайдера, провайдер решает проблему. Магазин работает на резервном канале с
        </item>
        <item>
            Проблема: отсутствует основной канал интернета \n\nРешение: магазин переведен на основной канал, провайдер устранил проблему \n\n
            Комментарий: магазин работал на резервном канале с
        </item>
        <item>
            Проблема: отключение электроэнергии \n\nКомментарий: магазин не торгует с
        </item>
        <item>
            Проблема: отключение электроэнергии \n\nРешение: электроэнергия восстановлена \n\nКомментарий: магазин не торговал с
        </item>
        <item>
            Проблема: нет связи с ЕГАИС \n\nРешение: разбираюсь с проблемой \n\nКомментарий: магазин не торгует крепким алкоголем с
        </item>
        <item>
            Проблема: нет связи с ЕГАИС, клиент не видит токен \n\nРешение: замена токена \n\n
            Комментарий: магазин не торговал крепким алкоголем с
        </item>
        <item>
            Проблема: нет стартуют службы UTM\n\nРешение: Перезагрузка базы, запуск служб вручную.\n\n
            Комментарий: магазин не торговал крепким алкоголем с
        </item>
        <item>
            \ - системный блок 1шт, образ актуальный, проблем по комплектующим нет - дата проверки
        </item>
    </string-array>
    <string name="title_activity_change_shop">ChangeShopActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>
