<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_shop_list"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/menu_shop_list" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_rate_review_black_24dp"
            android:title="@string/menu_reports" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_create_black_24dp"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_parser"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/Pars" />

        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/Users" />
    </group>
</menu>
