<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.shop_list.ActivityAddShop">

    <EditText
        android:id="@+id/etAddShopNumber"
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/textHint"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/ShopNumber"
        android:inputType="phone" />

    <EditText
        android:id="@+id/etAddShopCity"
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/textHint"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/ShopCity"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/etAddShopAddress"
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/textHint"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/ShopAddress"
        android:inputType="textCapSentences" />

    <Spinner
        android:id="@+id/spinAddOOO"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        />
    <LinearLayout
        android:id="@+id/lineRes"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkReserve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_gravity="left|center"
            android:text="Резерв" />

    </LinearLayout>

    <Button
        android:id="@+id/btnChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:layout_marginTop="30dp"
        android:text="@string/btn_change" />

    <Button
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:text="@string/Close" />
</LinearLayout>