<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_displacement"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".ui.reports.DisplacementFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/fromShop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/from"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/toShop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/to"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/reportForm"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="#fff"
                android:paddingLeft="10dp"
                android:gravity="start|top"
                android:hint="@string/ReportHint"
                android:inputType="textMultiLine"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:textColorHint="@color/textHint" />

            <Button
                android:id="@+id/buttonForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/btn_margin"
                android:text="@string/btn_form"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/btn_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/btn_margin"
                    android:text="@string/Clear"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/btn_text_size" />

                <Button
                    android:id="@+id/buttonSend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/btn_margin"
                    android:text="@string/Send"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/btn_text_size" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>