<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_report_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reports.ReportMenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_menu_reports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/Reports"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_menu_kbsa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/kbsa"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_menu_displacement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/displacement"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>
</FrameLayout>