<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.reports.ActivityAddBotReport">

    <EditText
        android:id="@+id/etRepText"
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/textHint"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/add_rep_hint"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btn_add_bot_rep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:layout_marginTop="30dp"
        android:text="@string/add_bot_report" />

    <Button
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:text="@string/Close" />

</LinearLayout>