<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".ui.reports.BotReportFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spin_shops"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_kbsa_reports"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_add_rep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/btn_margin"
                    android:text="@string/btn_add_rep"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/btn_del_rep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/btn_margin"
                    android:text="@string/btn_del_rep"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <EditText
                android:id="@+id/ed_txt_bot_report"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#fff"
                android:gravity="start|top"
                android:hint="@string/ReportHint"
                android:inputType="textMultiLine"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:padding="5dp"
                android:textColorHint="@color/textHint" />

            <Button
                android:id="@+id/btn_kbsa_rep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/btn_margin"
                android:text="@string/btn_form"
                android:textColor="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/btn_clear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/btn_margin"
                    android:layout_weight="1"
                    android:text="@string/clear_btn"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/btn_margin"
                    android:layout_weight="1"
                    android:text="@string/Send"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>