<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            tools:context=".ui.parser.ParsFragment">


            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/mainBgColor"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/editTextHint"
                android:inputType="textMultiLine"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/textHint" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:background="@color/mainBgColor"
                android:gravity="start|top"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp" />

            <Button
                android:id="@+id/checkButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:text="@string/checkButton"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/clear_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/clear_btn"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/buttonCopy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/btn_copy"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>